Добавлена поддержка PWA
 Реализованные возможности:
- Установка как нативное приложение
- Офлайн работа с кэшированием
- Service Worker с автообновлением
- Web App Manifest с метаданными
- Иконки всех размеров (192x192, 512x512, favicon)
- PWA мета-теги в HTML
- Настройка Vite для PWA

 PWA функции:
- Быстрая загрузка из кэша
- Работа без интернета
- Установка на рабочий стол
- Нативный вид приложения

 Новые команды:
- npm run build:pwa - сборка PWA
- npm run preview:pwa - предварительный просмотр
- npm run generate-icons - генерация иконок

 Добавленные файлы:
- public/manifest.webmanifest
- public/browserconfig.xml
- public/pwa-*.png (иконки)
- docs/PWA_SETUP.md
- vite-plugin-pwa конфигурация

--- a/index.html
+++ b/index.html
@@ -3,7 +3,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Password & Entropy Lab</title>
+  <title>SecPass - Анализатор паролей</title>
+  
+  <!-- PWA Meta Tags -->
+  <meta name="description" content="Мощный инструмент для анализа безопасности паролей" />
+  <meta name="theme-color" content="#1a1a1a" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+  <meta name="apple-mobile-web-app-title" content="SecPass" />
+  <meta name="msapplication-TileColor" content="#1a1a1a" />
+  <meta name="msapplication-config" content="/browserconfig.xml" />
+  
+  <!-- Icons -->
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  <link rel="manifest" href="/manifest.webmanifest" />
+  
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <style>
     /* 🔥 СОВРЕМЕННЫЙ ИНФОБЕЗ ДИЗАЙН */
