Улучшенная PWA с автоматической установкой
 Новые возможности:
- Автоматическое предложение установки PWA через 3 секунды
- Умная детекция возможности установки
- Красивое всплывающее уведомление с анимацией
- Подробные инструкции для Android, iPhone и компьютера
- Кнопка 'Позже' с сохранением в localStorage
- Обработка событий beforeinstallprompt и appinstalled

 Улучшенный UX:
- Автоматическое предложение только вне Telegram
- Инструкции не загромождают интерфейс
- Плавная анимация появления уведомления
- Адаптивный дизайн для всех устройств

 Логика работы:
1. При загрузке проверяется возможность установки
2. Через 3 сек показывается предложение (если не было раньше)
3. При нажатии 'Установить' - встроенное предложение браузера
4. При отсутствии встроенного предложения - инструкции
5. После установки уведомление скрывается

 Технические улучшения:
- Обработка событий PWA API
- Проверка display-mode для определения установки
- Fallback для старых версий браузеров
- Сохранение состояния в localStorage

--- a/index.html
+++ b/index.html
@@ -614,6 +614,17 @@
       50% { box-shadow: 0 0 30px rgba(0, 255, 136, 0.8); }
     }
 
+    @keyframes slideInDown {
+      from {
+        transform: translateY(-100%);
+        opacity: 0;
+      }
+      to {
+        transform: translateY(0);
+        opacity: 1;
+      }
+    }
+
     .glow-animation {
       animation: glow 2s ease-in-out infinite;
     }
