--- a/index.html
+++ b/index.html
@@ -625,6 +625,21 @@
       }
     }
 
+    @keyframes pulse {
+      0% {
+        transform: scale(1);
+        box-shadow: 0 0 0 0 rgba(0, 200, 81, 0.7);
+      }
+      70% {
+        transform: scale(1.05);
+        box-shadow: 0 0 0 10px rgba(0, 200, 81, 0);
+      }
+      100% {
+        transform: scale(1);
+        box-shadow: 0 0 0 0 rgba(0, 200, 81, 0);
+      }
+    }
+
     .glow-animation {
       animation: glow 2s ease-in-out infinite;
     }
